# momentum-app

./: .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  R_SPEC.md  R_TODO_WS.md  R_TODO_connextion.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/skills/momentum-app/: SKILL.md
.claude/skills/momentum-autosplitter/: SKILL.md
.claude/skills/momentum-stream/: SKILL.md
.claude/skills/player-counters/: SKILL.md
.claude/skills/speedrace-app/: SKILL.md
.claude/skills/speedrace-autosplitter/: SKILL.md
.github/workflows/: dev.yml  gate.yml  release.yml
docs/: PLAN_LOCAL_PREVIEW_PUBLISH.md  PLAN_MP4_REPLAY.md  README_STREAM_V2.md  SPEC_FFMPEG.md
public/locales/en/: app.json
public/locales/fr/: app.json
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: .env  .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: README.md  README_FFMPEG_MINIMAL_BUILD.md  build-ffmpeg.ps1  get-ffmpeg.ps1  get-game-capture.ps1  media-autobuild_suite.ini
src-tauri/src/: build.rs  commands.rs  config.rs  counter.rs  events.rs  lib.rs  lifecycle.rs  lobby.rs  logging.rs  main.rs  settings.rs  state.rs  upload.rs
src-tauri/src/api/: autosplitter.rs  cache.rs  category_split.rs  client.rs  counter_config.rs  lobby.rs  mod.rs
src-tauri/src/auth/: mod.rs  oauth.rs  refresh.rs  token_store.rs
src-tauri/src/autosplit/: LIVESPLIT_SPLIT_VERIFICATION.md  README.md  early_start.rs  mod.rs  run_started.rs  split.rs  tcp.rs  timer.rs  wasm.rs
src-tauri/src/commands/: auth_commands.rs  clock_commands.rs  lobby_commands.rs  mod.rs  settings_commands.rs  stream_commands.rs
src-tauri/src/counter/: tests.rs
src-tauri/src/models/: app_state.rs  auth.rs  lobby.rs  mod.rs  race.rs
src-tauri/src/stream/: audio.rs  capture.rs  capture_pipe.rs  encoder.rs  ffmpeg.rs  handler.rs  mod.rs  monitors.rs  pipeline.rs  preview.rs  replay.rs  thumbs.rs  types.rs  wgc.rs  whip.rs  window_list.rs
src-tauri/src/stream/gamecapture/: capture.rs  frame.rs  inject.rs  mod.rs  offsets.rs  protocol.rs  session.rs
src-tauri/src/upload/: assemble.rs  filler.rs  mod.rs  resumable.rs
src-tauri/src/ws/: client.rs  commands.rs  handler.rs  messages.rs  mod.rs
src-tauri/tests/: early_start.rs
src/components/: Banned.tsx  Finished.tsx  Footer.tsx  Header.tsx  Idle.tsx  Login.tsx  Racing.tsx  ServerUnavailable.tsx  SettingsPanel.tsx  SourcePicker.tsx  StopModal.tsx  StreamSetup.tsx  TitleBar.tsx  TrayHint.tsx  UpdateChecker.tsx  UpdateModal.tsx  WaitingForStart.tsx
src/components/ui/: BadgeHelper.tsx  PreviewCanvas.tsx  RaceStatus.tsx  SourceCard.tsx  SplitList.tsx  Thumb.tsx  Tooltip.tsx  WhepPreview.tsx  button.tsx
src/hooks/: useAppState.ts  useClockOffset.ts  useFinishHotkey.ts  useNow.ts  useStreamSettings.ts
src/i18n/: index.ts  resources.ts
src/lib/: commands.ts  events.ts  formatTime.ts  hotkey.ts  listeners.ts  sound.ts  subsplits.ts  tauri.ts  tryCatch.ts  updater.ts  webUrls.ts
src/locales/en/: app.json  common.json  settings.json
src/locales/fr/: app.json  common.json  settings.json
src/store/: AppContext.tsx  AppEventBridge.tsx  appReducer.ts  index.ts  types.ts  useActions.ts
src/store/dev/: DevToolbar.tsx  devMocks.ts
src/stream/: whep.ts  whip.ts
src/types/: index.ts
