[package]
name = "speedrace-app"
version = "0.1.0"
description = "Speedrace - Tauri desktop client"
authors = ["you"]
edition = "2021"

[lib]
name = "speedrace_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
reqwest = { version = "0.13.3", features = ["json"] }

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "process",
] }

tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"

chrono = { version = "0.4", features = ["clock", "serde"] }
base64 = "0.22.1"
rand = "0.10.1"
sha2 = "0.11.0"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
livesplit-core = "0.13.0"
livesplit-auto-splitting = { git = "https://github.com/LiveSplit/livesplit-core", branch = "master" }

[target.'cfg(windows)'.dependencies]
# cpal stays windows-only: pulling it on Linux CI demands ALSA dev libs for code that's #[cfg(windows)] anyway
cpal = "0.18"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
windows-capture = "2.0.0"
